# wpm

./: Cargo.toml
src/: app.rs  configuration.rs  main.rs  menu_widget.rs  mode_select_widget.rs  result_widget.rs  settings_widget.rs  typing_widget.rs  wordset.rs
