[package]
name = "wmp"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["ryu-min <SergeyR6@yandex.ru>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.30.0"
color-eyre = "0.6.3"
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
